add: minio、upload api；fixd:public list api
