# docs/swagger.json
@@ -29,6 +29,40 @@
                 ]
             }
         },
+        "/douyin/publish/action/": {
+            "post": {
+                "description": "视频投稿",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "视频接口"
+                ],
+                "parameters": [
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "name": "data",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "token",
+                        "in": "query"
+                    }
+                ]
+            }
+        },
         "/douyin/publish/list/": {
             "get": {
                 "description": "获取用户发表的视频列表",
@@ -43,14 +77,13 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
+                        "description": "body",
                         "name": "token",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "user_id",
-                        "in": "query"
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/video.PublishListRequest"
+                        }
                     }
                 ]
             }
@@ -71,6 +104,17 @@
                 },
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "video.PublishListRequest": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
